Revision history for Mojolicious-Plugin-PstemplateRenderer

0.01 2011/03/23
  - initial release

0.02 2011/03/31
  - some natie helpers available

0.03 2011/04/22
  - Improved error logging

0.04 2011/05/16
  - ActionBase class added for frameworking

0.05 2011/05/17
  - Template not found now causes die

0.06 2011/05/18
  - API got simple

0.07 2011/05/18
  - ComponentBase got some utility functions for template

0.08 2011/05/19
  - Controller no more given via second arg on tpl funcs

0.09 2011/05/19
  - Distribution renamed

0.10 2011/05/20
  - Mojo::Tusu::plug for hooking MojoX::Tusu::ComponentBase::init

0.11 2011/05/23
  - Template dir and static dir both now defaults to public_html

0.12 2011/05/26
  - Exception object explicitly stringified

0.13 2011/05/31
  - Extensions_to_render method added

0.14 2011/06/01
  - document_root method optimized & bug fixed

0.15 2011/06/01
  - plug method now capable of multiple plugins at once

0.16 2011/06/01
  - Reduce messign app attr namaspace

0.17 2011/06/08
  - File searching rule has changed. It got similar to behavior of apache 
  - directory_index method added
  - Compatibility with apache improved
  - bootstrap renewed

0.18 2011/06/08
  - url_abs added