@@ -12,26 +12,11 @@ t/01_basic/01_constractor.t
 t/01_basic/02_template_load.t
 t/01_basic/03_ComponentBase.t
 t/01_basic/04_include.t
-t/01_basic/05_document_root.t
-t/01_basic/05_public_html/index.html
-t/01_basic/05_public_html/index.txt
 t/01_basic/06_extensions_to_render.t
 t/01_basic/07_Component_render.t
 t/01_basic/08_template_not_found.t
 t/01_basic/09_static.t
-t/01_basic/public_html/02.html
-t/01_basic/public_html/02/02_02.html
-t/01_basic/public_html/02/index.html
-t/01_basic/public_html/03_ComponentBase01.html
-t/01_basic/public_html/03_ComponentBase02.html
-t/01_basic/public_html/03_ComponentBase03.html
-t/01_basic/public_html/04/index.html
-t/01_basic/public_html/04/index2.html
-t/01_basic/public_html/04/index3.html
-t/01_basic/public_html/04/sub.html
-t/01_basic/public_html/04/sub/sub2.html
-t/01_basic/public_html/04/sub/sub3-filename.html
-t/01_basic/public_html/index.html
+t/01_basic/10_permission.t
 t/02_lite/02_template_load.t
 t/02_lite/03_ComponentBase.t
 t/02_lite/04_include.t
@@ -40,14 +25,6 @@ t/02_lite/07_Component_render.t
 t/02_lite/08_template_not_found_dev.t
 t/02_lite/08_template_not_found_pro.t
 t/02_lite/09_static.t
-t/02_lite/public_html/02.html
-t/02_lite/public_html/02/01_01.html
-t/02_lite/public_html/02/02_02.html
-t/02_lite/public_html/02/index.html
-t/02_lite/public_html/03_ComponentBase01.html
-t/02_lite/public_html/03_ComponentBase02.html
-t/02_lite/public_html/03_ComponentBase03.html
-t/02_lite/public_html/index.html
 t/99_pod.t
 t/99_podcoverage.t
 t/public_html/02.html
@@ -70,4 +47,8 @@ t/public_html/07/some_component/index.html
 t/public_html/07/some_component/index2.html
 t/public_html/08/index.html
 t/public_html/09/img/a.gif
+t/public_html/10/permission_ng/permission_ng.html
+t/public_html/10/permission_ng/permission_ok.html
+t/public_html/10/permission_ok/permission_ng.html
+t/public_html/10/permission_ok/permission_ok.html
 t/public_html/index.html
