@@ -1,66 +1,0 @@
-Changes
-lib/MojoX/Tusu.pm
-lib/MojoX/Tusu/ComponentBase.pm
-lib/MojoX/Tusu/Plugin/Mojolicious.pm
-lib/MojoX/Tusu/Plugin/Util.pm
-lib/MojoX/Tusu/PluginBase.pm
-Makefile.PL
-MANIFEST
-README
-t/00_load.t
-t/01_basic/01_constractor.t
-t/01_basic/02_template_load.t
-t/01_basic/03_ComponentBase.t
-t/01_basic/04_include.t
-t/01_basic/05_document_root.t
-t/01_basic/05_public_html/index.html
-t/01_basic/05_public_html/index.txt
-t/01_basic/06_extensions_to_render.t
-t/01_basic/07_Component_render.t
-t/01_basic/08_template_not_found.t
-t/01_basic/public_html/02.html
-t/01_basic/public_html/02/02_02.html
-t/01_basic/public_html/02/index.html
-t/01_basic/public_html/03_ComponentBase01.html
-t/01_basic/public_html/03_ComponentBase02.html
-t/01_basic/public_html/03_ComponentBase03.html
-t/01_basic/public_html/04/index.html
-t/01_basic/public_html/04/index2.html
-t/01_basic/public_html/04/index3.html
-t/01_basic/public_html/04/sub.html
-t/01_basic/public_html/04/sub/sub2.html
-t/01_basic/public_html/04/sub/sub3-filename.html
-t/01_basic/public_html/index.html
-t/02_lite/02_template_load.t
-t/02_lite/03_ComponentBase.t
-t/02_lite/04_include.t
-t/02_lite/06_extensions_to_render.t
-t/02_lite/07_Component_render.t
-t/02_lite/public_html/02.html
-t/02_lite/public_html/02/01_01.html
-t/02_lite/public_html/02/02_02.html
-t/02_lite/public_html/02/index.html
-t/02_lite/public_html/03_ComponentBase01.html
-t/02_lite/public_html/03_ComponentBase02.html
-t/02_lite/public_html/03_ComponentBase03.html
-t/02_lite/public_html/index.html
-t/99_pod.t
-t/99_podcoverage.t
-t/public_html/02.html
-t/public_html/02/02_02.html
-t/public_html/02/index.html
-t/public_html/03_ComponentBase01.html
-t/public_html/03_ComponentBase02.html
-t/public_html/03_ComponentBase03.html
-t/public_html/04/index.html
-t/public_html/04/index2.html
-t/public_html/04/index3.html
-t/public_html/04/sub.html
-t/public_html/04/sub/sub2.html
-t/public_html/04/sub/sub3-filename.html
-t/public_html/06/index.html
-t/public_html/06/index.txt
-t/public_html/07/some_component/index.html
-t/public_html/07/some_component/index2.html
-t/public_html/08/index.html
-t/public_html/index.html
